# pcr

./: .clang-format  CMakeLists.txt  README.md
include/: OrbitalCamera.h  PointCloudScene.h  ShaderProgram.h  ply_utils.h
include/GLUtils/: Buffer.h  Framebuffer.h  ShaderProgram.h  Texture.h  Timer.h  VAO.h
libs/Remotery/: Remotery.c  Remotery.h
shaders/: element_comp.glsl  output_frag.glsl  points_frag.glsl  points_vert.glsl  screenspace_vert.glsl  visibility_comp.glsl
src/: OrbitalCamera.cpp  PointCloudScene.cpp  main.cpp
src/GLUtils/: ShaderProgram.cpp  Timer.cpp
